test/language/spec/syntax/invalid/unclosed_namespace.topo
// TEST: unclosed namespace brace
// EXPECT-ERROR: expected

namespace app {
  public:
    void run();
